--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -14,6 +14,8 @@ $blue-op2 : rgba(97, 218, 243, 0.63);
 $gray : #BCBEC0;
 $gray-1 : #E6E7E8;
 $gray-3 : #F2F2F2;
+$gray-4 : #666;
+$gray-5 : #555656;
 
 //screens
 $tablet-width: 768px;
