--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -5,82 +5,68 @@
 body {
 	&.page-template-about-tpl {
 		.blue-bg {
-			background-image: url('../img/bg-1.jpg');
-			background-color: $blue-1;
-			background-position: top left;
-			background-repeat: no-repeat;
-		}
-		// textos mision y vision
-		#mision {
-			position: relative;
-			min-height: 406px;
-			p,
-			h2 {
-				color: $white;
-			}
-			// titles
-			h2{
-				border: 1px solid $white;
-				margin-top: 4em;
-				display: block;
-				max-width: 200px;
-				text-align: right;
-				padding: .3em .4em;
-				@include mobile {
-					margin: 1em auto;
-					text-align: center;
+			background: white !important;
+			background-image: none !important;
+			.page-head{
+				h2 {
+					color: black;
+					font-weight: bold;
 				}
-				&::nth-child(2){
-					margin-top: 5em;
-					@include mobile {
-						margin: 1em auto;
-					}	
+			} 
+			.content {
+				width: 80%;
+	    		margin-left: 20%;
+				p{
+					text-align: right;
 				}
-			}
-		}
-		// sidebar
-		aside{
-			min-height: 540px;
-			@include mobile {
-				min-height: 33px;
-			}
-			.text-3.widget_text {
-				display: none;
 			}
 		}
 		//content
-		.the_content {
-			// title
-			h1 {
-				border: 1px solid $blue-1;
-				color: $blue-1;
-				margin-top: 1em;
-				display: block;
-				max-width: 260px;
-				text-align: right;
-				padding: .3em .4em;
-				@include mobile {
-					margin: 1em auto;
+		.container-fluid {
+			padding: 2em 0 3em;
+			background-image: url(../img/bg-3.jpg);
+			background-size: cover;
+			background-attachment: fixed;
+			.the_content {
+				// title
+				h1 {
 					text-align: center;
+					color: white;
+					@include mobile {
+						margin: 1em auto;
+						text-align: center;
+					}
 				}
-			}
-			//article item
-			article {
-				display: block;
-				overflow: hidden;
-				margin-bottom: 2em;
-				h2{
-					margin: 4em 0 0 0;
-					font-size: 1.3em;
-					color: $blue-1;
+				p {
+					color: white; 
 				}
-				img {
-					float: left;
-					margin: 1em;
-					max-width: 100%;
-					height: auto;
+				//article item
+				.col-md-6 {
+					.item {
+						max-width: 90%;
+						margin: 1em auto;
+						background-color: white;
+						padding-bottom: 2em;
+						figure{
+							display: block;
+							background-color: $gray-4;
+							min-height: 230px;
+							width: 100%;
+						}
+						h2 {
+							color: $blue-1;
+							font-size: 1.4em;
+							max-width: 90%;
+							margin: 5%;
+						}
+						p{
+							color: $gray-5;
+							max-width: 90%;
+							margin: 5%;
+						}
+					}
 				}
-			}
-		} 
+			} 
+		}
 	}
 }
