--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,21 +1,62 @@
 .site-footer {
-	margin: 2em auto 0;
+	margin: 0 auto;
 	padding: 2em;
-	text-align: center;
-	background-color: $blue-2;
-	ul.footer-nav {
-		li {
-			display: inline-block;
-			a {
-				color: $white;
-				font-weight: bold;
-				border-right: 1px solid $white;
-				padding: 0 1.4em;
+	background-color: $gray-4;
+	color: $gray;
+	.col-md-4 {
+		h2{
+			text-transform: uppercase;
+			font-size: 1.2em;
+		}
+		figure {
+			border-bottom: 1px solid $gray;
+			img{
+				padding: 2em 0;
 			}
 		}
-	}
-	p {
-		text-align: center;
-		color: $white; 
+		p{
+			margin-top: 2em;
+			text-align: left;
+		}
+
+		ul{
+			padding: 0;
+			margin-top: 1em;
+			li {
+				margin-bottom: 1.5em;
+				i {
+					color: $blue-1;
+					font-size: 2em;
+					margin-left: 1em;
+				}
+				a {
+					color: $gray;
+				}
+			}
+		}
+
+		form {
+			br {
+				display: none;
+			}
+			input{
+				&[type="text"],
+				&[type="email"]{
+					background-color: $gray;
+					border-radius: 0;
+					margin-bottom: .5em;
+					display: block;
+				}
+
+				&[type="submit"] {
+					margin-top: 1.4em;
+				}
+			}
+			textarea {
+				background-color: $gray;
+				border-radius: 0;
+				height: 100px; 
+			}
+		}
 	}
 }
