--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -23,7 +23,7 @@ body {
 		}
 		//content
 		.container-fluid {
-			padding: 2em 0 3em;
+			padding: 2em 15px 3em;
 			background-image: url(../img/bg-3.jpg);
 			background-size: cover;
 			background-attachment: fixed;
@@ -39,6 +39,8 @@ body {
 				}
 				p {
 					color: white; 
+					text-align: center;
+					padding: 2em 1em;
 				}
 				//article item
 				.col-md-6 {
