--- a/scss/_clients.scss
+++ b/scss/_clients.scss
@@ -3,53 +3,35 @@
  Clients
  ______________________________________*/
 body{
-	&.page.page-id-65{
-		#content{
-			.hentry{
-				h2{
-					border: 1px solid $blue-1;
-					color: $blue-1;
-					margin-top: 1em;
-					display: block;
-					max-width: 320px;
-					text-align: left;
-					padding: .3em .4em;
-					text-transform: uppercase;
-					@include mobile {
-						margin: 1em auto;
-						text-align: center;
-					}
-				}
-				//Clients
-				ul{
-					padding: 0;
-					text-align: center;
-					li{
-						list-style: none;
-						display: inline-block;
-						vertical-align: middle;
-						margin: 1em;
-						img {
-							max-width: 100%;
-							height: auto;
-						}
-					}
-					&:first-child {
-						border-bottom: 4px solid $blue-1;
-					}
-				}
+	&.page-template-clients-tpl{
+		.main {
+			h2 {
+				padding: 1em 0;
+			}
+
+			p {
+				text-align: center;
+				padding: 2em 0;
 			}
 		}
-		//sidebar
-		aside{
-			@include desktop {
-				min-height: 1350px;
+
+		.events {
+			article {
+				position: relative;
+				figure {
+					width: 100%;
+					height: 100%;
+					img {
+						height: 100%;
+						width: auto;
+					}
+				}
+
+				.caption {
+					position: absolute;
+					top: 0; 
+				}
 			}
-			min-height: 40px;
-		}
-		//footer
-		.site-footer {
-			margin-top: 0;
 		}
 	}
 }
