--- a/scss/_clients.scss
+++ b/scss/_clients.scss
@@ -13,11 +13,22 @@ body{
 				text-align: center;
 				padding: 2em 0;
 			}
+			ul{
+				padding: 2em 0;
+				li{
+					img{
+						display: block;
+						margin: 0 auto;
+					}
+				}
+			}
 		}
 
 		.events {
 			article {
 				position: relative;
+				padding: 0;
+				margin: 15px;
 				figure {
 					width: 100%;
 					height: 100%;
@@ -28,8 +39,32 @@ body{
 				}
 
 				.caption {
+					display: none;
 					position: absolute;
 					top: 0; 
+					left: 0;
+					width: 100%;
+					height: 100%;
+					z-index: 2;
+					background-color: rgba(0,0,0,0.8);
+					text-align: center;
+					color: $white;
+					a {
+						h3{
+							color: $white;
+						}
+					}
+					
+					p {
+						display: none;
+					}
+				}
+				&:hover {
+					.caption {
+						display: block;
+						padding: 1em;
+
+					}
 				}
 			}
 		}
