--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,34 +4,47 @@
  ______________________________________*/
 body{
 	&.page.page-id-61{
+		h3 {
+			text-transform: uppercase;
+			color: $blue-1;
+			background-color: $white;
+			position: relative;
+			display: block;
+			&::after{
+				content: "";
+				display: block;
+				width: 100%;
+				height: 5px;
+				width: 56%;
+				background-color: $blue-1;
+				position: absolute;
+				top: 40%;
+				right: 0; 
+			}
+		}
 		.content {
 			header {
 				display: none;
 			}
 			.col-md-6 {
-				h3 {
-					text-transform: uppercase;
-					color: $blue-1;
-					background-color: $white;
-					position: relative;
-					display: block;
-					&::after{
-						content: "";
-						display: block;
-						width: 100%;
-						height: 5px;
-						width: 56%;
-						background-color: $blue-1;
-						position: absolute;
-						top: 40%;
-						right: 0; 
-					}
-				}
 			}
 		}
 
 		.site-footer {
 			margin-top: 0;
+		}
+
+		//items contact
+		.contact-items {
+			position: relative;
+			padding: 2em 0;
+			> div {
+				text-align: center;
+				img{
+					display: inline-block;
+					margin: 1em auto;
+				}
+			}
 		}
 	}
 }
