--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -45,6 +45,8 @@ body {
 			.featured{
 				.last-post{
 					border: 1px solid $gray;
+					min-height: 526px;
+					background-color: white;
 					figure{
 						position: relative;
 						overflow: hidden;
@@ -57,6 +59,7 @@ body {
 								display: block;
 								position: relative;
 								text-decoration: none;
+								margin-left: 1em;
 								h3 {
 									color: $blue-1;
 									padding: 1em;
